<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDFDF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="271dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/txtAppName"
        android:textColor="#45277C"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#F3F2F2"
        android:ems="10"
        android:hint="@string/edtFirstName"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="#000000"
        android:textColorHint="#676767"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName" />

    <EditText
        android:id="@+id/edtMidInit"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#F3F2F2"
        android:ems="10"
        android:hint="@string/edtMidInit"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="#676767"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFirstName" />

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#F3F2F2"
        android:ems="10"
        android:hint="@string/edtLastName"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="#676767"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMidInit" />

    <EditText
        android:id="@+id/edtHeight"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#F3F2F2"
        android:ems="10"
        android:hint="@string/edtHeight"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="#676767"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgroupGender" />

    <EditText
        android:id="@+id/edtWeight"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="#F3F2F2"
        android:ems="10"
        android:hint="@string/edtWeight"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="#676767"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtHeight" />

    <Button
        android:id="@+id/btnCompute"
        android:layout_width="377dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnCompute"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtWeight" />

    <RadioGroup
        android:id="@+id/rgroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/rgrpGender"
        tools:layout_editor_absoluteX="-18dp">

        <RadioButton
            android:id="@+id/rbtnMale"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="20dp"
            android:background="#A4B3FF"
            android:text="@string/rbtnMale" />

        <RadioButton
            android:id="@+id/rbtnFemale"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="#FFA4DB"
            android:text="@string/rbtnFemale" />

    </RadioGroup>

    <TextView
        android:id="@+id/rgrpGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/rgrpGender"
        android:textColor="#676767"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLastName" />




</androidx.constraintlayout.widget.ConstraintLayout>